--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="eyy">
     <h1>WELCOME QPAL</h1>
-   <a href="ha.html"><button onclick="alert('HAHAAHAHAHAHHAHAHA KUPAL KA!')"><span></span>Click Me!!!</button></a>
+   <a href="hat.html"><button onclick="alert('HAHAAHAHAHAHHAHAHA KUPAL KA!')"><span></span>Click Me!!!</button></a>
     </div>
 </body>
 </html>
